--- a/ocr-test-hybrid.html
+++ b/ocr-test-hybrid.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OCR Test - Hybrid (QR + Barcode + OCR)</title>
+    <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Malgun Gothic', sans-serif; background: #1a1a2e; color: #fff; min-height: 100vh; padding: 20px; }
@@ -24,14 +25,10 @@
         .btn:disabled { background: #555; color: #888; cursor: not-allowed; }
         .result-box { background: #2d2d44; border-radius: 12px; padding: 20px; margin-bottom: 15px; }
         .result-title { font-size: 14px; color: #888; margin-bottom: 10px; }
-        .serial-result { font-family: Consolas, monospace; font-size: 24px; color: #4ecca3; text-align: center; padding: 20px; background: #1a1a2e; border-radius: 8px; }
-        .detection-method { text-align: center; margin-top: 10px; }
         .method-tag { display: inline-block; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: bold; }
         .method-qr { background: #8b5cf6; }
         .method-barcode { background: #3b82f6; }
         .method-ocr { background: #ef4444; }
-        .verified { background: #10b981; }
-        .mismatch { background: #f59e0b; }
         .serial-item { display: flex; align-items: center; justify-content: space-between; padding: 12px; background: #1a1a2e; border-radius: 8px; margin-bottom: 8px; }
         .serial-item:last-child { margin-bottom: 0; }
         .serial-value { font-family: Consolas, monospace; font-size: 16px; color: #4ecca3; word-break: break-all; }
@@ -52,6 +49,10 @@
         .modal-close { position: absolute; top: 15px; right: 20px; color: #fff; font-size: 32px; cursor: pointer; z-index: 1001; }
         .priority-info { background: #2d2d44; border-radius: 12px; padding: 15px; margin-bottom: 20px; font-size: 12px; color: #888; }
         .priority-info strong { color: #4ecca3; }
+        .processing-info { font-size: 11px; color: #888; margin-top: 5px; }
+        .processing-info span { margin-right: 10px; }
+        .check { color: #10b981; }
+        .pending { color: #f59e0b; }
     </style>
 </head>
 <body>
@@ -59,13 +60,13 @@
         <h1><span class="method-badge">Hybrid</span> QR + Barcode + OCR</h1>
 
         <div class="priority-info">
-            <strong>인식 우선순위:</strong> QR코드 → 1D 바코드 → OCR 텍스트
+            <strong>병렬 처리:</strong> QR/바코드 (html5-qrcode, 로컬) + OCR (Google Vision API)
         </div>
 
         <div class="api-key-section">
-            <label>Google Cloud Vision API Key</label>
+            <label>Google Cloud Vision API Key (OCR용)</label>
             <input type="password" id="apiKey" placeholder="Enter your API key...">
-            <div class="note">* Get key from Google Cloud Console > APIs & Services > Credentials</div>
+            <div class="note">* QR/바코드는 API 없이 로컬에서 인식됩니다</div>
         </div>
 
         <label class="upload-area" for="fileInput" id="uploadArea">
@@ -80,6 +81,10 @@
         </div>
 
         <div id="status"></div>
+        <div class="processing-info" id="processingInfo" style="display:none; text-align:center; margin-bottom:15px;">
+            <span id="qrStatus">QR/Barcode: 처리중...</span>
+            <span id="ocrStatus">OCR: 처리중...</span>
+        </div>
         <button class="btn" id="scanBtn" disabled>Scan</button>
 
         <div class="result-box">
@@ -98,7 +103,7 @@
                 Detection Details
                 <button class="toggle-btn" onclick="toggleRaw()">Show/Hide</button>
             </div>
-            <div class="raw-result" id="rawResult" style="display:block;">Waiting...</div>
+            <div class="raw-result" id="rawResult" style="display:none;">Waiting...</div>
         </div>
     </div>
 
@@ -118,7 +123,11 @@
         const timeEl = document.getElementById('time');
         const apiKeyInput = document.getElementById('apiKey');
         const sizeInfo = document.getElementById('sizeInfo');
+        const processingInfo = document.getElementById('processingInfo');
+        const qrStatusEl = document.getElementById('qrStatus');
+        const ocrStatusEl = document.getElementById('ocrStatus');
 
+        let currentFile = null;
         let imageBase64 = null;
 
         function toggleRaw() {
@@ -136,8 +145,8 @@
 
         preview.addEventListener('click', () => openModal(preview.src));
 
-        // 이미지 리사이즈 함수 (QR/바코드 인식을 위해 고품질 유지)
-        function resizeImage(file, maxWidth = 1600) {
+        // 이미지 리사이즈 함수 (OCR용)
+        function resizeImage(file, maxWidth = 1280) {
             return new Promise((resolve) => {
                 const reader = new FileReader();
                 reader.onload = (e) => {
@@ -156,12 +165,9 @@
                         canvas.height = height;
 
                         const ctx = canvas.getContext('2d');
-                        // 이미지 스무딩 끄기 (바코드/QR 선명도 유지)
-                        ctx.imageSmoothingEnabled = false;
                         ctx.drawImage(img, 0, 0, width, height);
 
-                        // PNG로 저장 (무손실, 바코드/QR에 좋음)
-                        const resizedDataUrl = canvas.toDataURL('image/png');
+                        const resizedDataUrl = canvas.toDataURL('image/jpeg', 0.8);
                         const base64 = resizedDataUrl.split(',')[1];
 
                         const originalSize = (file.size / 1024).toFixed(1);
@@ -179,6 +185,21 @@
                     img.src = e.target.result;
                 };
                 reader.readAsDataURL(file);
+            });
+        }
+
+        // html5-qrcode로 QR/바코드 스캔 (이미지 파일에서)
+        async function scanQRFromFile(file) {
+            return new Promise((resolve) => {
+                const html5QrCode = new Html5Qrcode("temp-qr-reader", { verbose: false });
+
+                html5QrCode.scanFile(file, true)
+                    .then(decodedText => {
+                        resolve({ success: true, text: decodedText });
+                    })
+                    .catch(err => {
+                        resolve({ success: false, error: err });
+                    });
             });
         }
 
@@ -259,133 +280,169 @@
             const file = e.target.files[0];
             if (!file) return;
 
+            currentFile = file;
             status.textContent = 'Loading image...';
 
-            // 원본 이미지 그대로 사용 (리사이즈 없음)
-            const reader = new FileReader();
-            reader.onload = (evt) => {
-                const dataUrl = evt.target.result;
-                imageBase64 = dataUrl.split(',')[1];
-                preview.src = dataUrl;
-                uploadArea.style.display = 'none';
-                previewArea.style.display = 'flex';
-                sizeInfo.textContent = `${(file.size / 1024).toFixed(1)}KB (원본)`;
-                scanBtn.disabled = false;
-                serialList.innerHTML = '<div class="serial-item"><span class="serial-value">-</span></div>';
-                verificationStatus.style.display = 'none';
-                rawResultEl.textContent = 'Ready to scan...';
-                status.textContent = '';
-                timeEl.textContent = '';
+            const resized = await resizeImage(file, 1280);
 
-                // 자동 스캔 시작
-                setTimeout(() => scanBtn.click(), 100);
-            };
-            reader.readAsDataURL(file);
+            imageBase64 = resized.base64;
+            preview.src = resized.dataUrl;
+            uploadArea.style.display = 'none';
+            previewArea.style.display = 'flex';
+            sizeInfo.textContent = `${resized.originalSize}KB → ${resized.newSize}KB (${resized.width}x${resized.height})`;
+            scanBtn.disabled = false;
+            serialList.innerHTML = '<div class="serial-item"><span class="serial-value">-</span></div>';
+            verificationStatus.style.display = 'none';
+            rawResultEl.textContent = 'Ready to scan...';
+            status.textContent = '';
+            timeEl.textContent = '';
+
+            // 자동 스캔 시작
+            setTimeout(() => scanBtn.click(), 100);
         });
 
         scanBtn.addEventListener('click', async () => {
             const apiKey = apiKeyInput.value.trim();
-            if (!apiKey) {
-                alert('Please enter Google Vision API Key');
-                return;
-            }
-            if (!imageBase64) return;
+            if (!currentFile) return;
 
             scanBtn.disabled = true;
-            status.textContent = 'Scanning QR + Barcode + OCR...';
+            status.textContent = 'Scanning...';
+            processingInfo.style.display = 'block';
+            qrStatusEl.innerHTML = '<span class="pending">QR/Barcode: 처리중...</span>';
+            ocrStatusEl.innerHTML = '<span class="pending">OCR: 처리중...</span>';
             serialList.innerHTML = '<div class="serial-item"><span class="serial-value">...</span></div>';
             verificationStatus.style.display = 'none';
             rawResultEl.textContent = '';
             const startTime = Date.now();
 
-            try {
-                // Google Vision API - TEXT + BARCODE 둘 다 요청 (테스트용)
-                const response = await fetch(`https://vision.googleapis.com/v1/images:annotate?key=${apiKey}`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        requests: [{
-                            image: { content: imageBase64 },
-                            features: [
-                                { type: 'BARCODE_DETECTION' },
-                                { type: 'TEXT_DETECTION' }
-                            ]
-                        }]
-                    })
-                });
+            let details = [];
+            let qrValue = null;
+            let ocrValue = null;
 
-                const data = await response.json();
-                const elapsed = ((Date.now() - startTime) / 1000).toFixed(2);
+            // 병렬 처리: QR/바코드 (로컬) + OCR (API)
+            const qrPromise = scanQRFromFile(currentFile).then(result => {
+                if (result.success) {
+                    qrValue = result.text;
+                    details.push(`[QR/Barcode - html5-qrcode] ${result.text}`);
+                    qrStatusEl.innerHTML = '<span class="check">✓ QR/Barcode: 완료</span>';
+                } else {
+                    details.push(`[QR/Barcode] 미인식`);
+                    qrStatusEl.innerHTML = '<span class="check">✓ QR/Barcode: 미인식</span>';
+                }
+                return result;
+            });
 
+            const ocrPromise = apiKey ? fetch(`https://vision.googleapis.com/v1/images:annotate?key=${apiKey}`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    requests: [{
+                        image: { content: imageBase64 },
+                        features: [{ type: 'TEXT_DETECTION' }]
+                    }]
+                })
+            }).then(res => res.json()).then(data => {
                 if (data.error) {
-                    throw new Error(data.error.message);
+                    details.push(`[OCR Error] ${data.error.message}`);
+                    ocrStatusEl.innerHTML = '<span class="check">✓ OCR: 에러</span>';
+                    return null;
                 }
-
                 const result = data.responses[0];
-                let details = [];
-
-                // 디버깅: 전체 API 응답 출력
-                details.push('=== BARCODE ===');
-                if (result.barcodeAnnotations && result.barcodeAnnotations.length > 0) {
-                    for (const b of result.barcodeAnnotations) {
-                        details.push(`[${b.format}] ${b.rawValue}`);
-                    }
-                } else {
-                    details.push('(바코드/QR 없음)');
-                }
-
-                details.push('\n=== TEXT ===');
                 if (result.textAnnotations && result.textAnnotations.length > 0) {
-                    details.push(result.textAnnotations[0].description);
+                    const ocrText = result.textAnnotations[0].description;
+                    details.push('\n--- OCR Text (Google Vision) ---\n' + ocrText);
+                    ocrValue = extractSerial(ocrText);
+                    ocrStatusEl.innerHTML = '<span class="check">✓ OCR: 완료</span>';
                 } else {
-                    details.push('(텍스트 없음)');
+                    details.push('[OCR] 텍스트 미인식');
+                    ocrStatusEl.innerHTML = '<span class="check">✓ OCR: 미인식</span>';
                 }
+                return result;
+            }).catch(err => {
+                details.push(`[OCR Error] ${err.message}`);
+                ocrStatusEl.innerHTML = '<span class="check">✓ OCR: 에러</span>';
+                return null;
+            }) : Promise.resolve().then(() => {
+                details.push('[OCR] API 키 없음 - 스킵');
+                ocrStatusEl.innerHTML = '<span class="check">✓ OCR: API 키 없음</span>';
+                return null;
+            });
 
-                // QR 코드만 확인 (테스트용)
-                let qrValue = null;
+            // 둘 다 완료될 때까지 대기
+            await Promise.all([qrPromise, ocrPromise]);
 
-                if (result.barcodeAnnotations && result.barcodeAnnotations.length > 0) {
-                    for (const barcode of result.barcodeAnnotations) {
-                        if (barcode.format === 'QR_CODE' && !qrValue) {
-                            qrValue = barcode.rawValue;
-                        }
-                    }
-                }
+            const elapsed = ((Date.now() - startTime) / 1000).toFixed(2);
 
-                // 결과 표시
-                if (qrValue) {
-                    serialList.innerHTML = `
-                        <div class="serial-item">
-                            <span class="serial-value">${qrValue}</span>
-                            <span class="method-tag method-qr">QR Code</span>
-                        </div>`;
-                    verificationStatus.className = 'verification-status status-verified';
-                    verificationStatus.textContent = '✓ QR 인식 성공';
-                    verificationStatus.style.display = 'block';
-                } else {
-                    serialList.innerHTML = `
-                        <div class="serial-item">
-                            <span class="serial-value no-detect">(QR 미인식)</span>
-                            <span class="method-tag method-qr">QR Code</span>
-                        </div>`;
-                    verificationStatus.className = 'verification-status status-mismatch';
-                    verificationStatus.textContent = '⚠ QR 인식 실패';
-                    verificationStatus.style.display = 'block';
-                }
+            // 결과 표시
+            let html = '';
+            const values = [];
 
-                rawResultEl.textContent = details.join('\n') || '(No data detected)';
-                status.textContent = 'Done!';
-                timeEl.textContent = `Time: ${elapsed}s`;
-
-            } catch (err) {
-                serialList.innerHTML = '<div class="serial-item"><span class="serial-value">Error</span></div>';
-                verificationStatus.style.display = 'none';
-                rawResultEl.textContent = 'Error: ' + err.message;
-                status.textContent = 'Failed';
+            // QR/Barcode
+            if (qrValue) {
+                values.push(qrValue.toUpperCase().replace(/[^A-Z0-9]/g, ''));
+                html += `
+                    <div class="serial-item">
+                        <span class="serial-value">${qrValue}</span>
+                        <span class="method-tag method-qr">QR/Barcode</span>
+                    </div>`;
+            } else {
+                html += `
+                    <div class="serial-item">
+                        <span class="serial-value no-detect">(미인식)</span>
+                        <span class="method-tag method-qr">QR/Barcode</span>
+                    </div>`;
             }
+
+            // OCR
+            if (ocrValue) {
+                values.push(ocrValue.toUpperCase().replace(/[^A-Z0-9]/g, ''));
+                html += `
+                    <div class="serial-item">
+                        <span class="serial-value">${ocrValue}</span>
+                        <span class="method-tag method-ocr">OCR</span>
+                    </div>`;
+            } else {
+                html += `
+                    <div class="serial-item">
+                        <span class="serial-value no-detect">(미인식)</span>
+                        <span class="method-tag method-ocr">OCR</span>
+                    </div>`;
+            }
+
+            serialList.innerHTML = html;
+
+            // 검증 상태 결정
+            const detectedCount = values.length;
+            if (detectedCount === 0) {
+                verificationStatus.className = 'verification-status status-single';
+                verificationStatus.textContent = '인식된 값 없음';
+                verificationStatus.style.display = 'block';
+            } else if (detectedCount === 1) {
+                verificationStatus.className = 'verification-status status-single';
+                verificationStatus.textContent = '단일 소스 인식';
+                verificationStatus.style.display = 'block';
+            } else {
+                const allMatch = values.every(v => v === values[0]);
+                if (allMatch) {
+                    verificationStatus.className = 'verification-status status-verified';
+                    verificationStatus.textContent = `✓ 검증완료 (${detectedCount}개 소스 일치)`;
+                } else {
+                    verificationStatus.className = 'verification-status status-mismatch';
+                    verificationStatus.textContent = `⚠ 값 불일치 - 확인 필요`;
+                }
+                verificationStatus.style.display = 'block';
+            }
+
+            rawResultEl.textContent = details.join('\n') || '(No data detected)';
+            status.textContent = 'Done!';
+            timeEl.textContent = `Time: ${elapsed}s`;
+            processingInfo.style.display = 'none';
 
             scanBtn.disabled = false;
         });
     </script>
+
+    <!-- html5-qrcode용 숨겨진 요소 -->
+    <div id="temp-qr-reader" style="display:none;"></div>
 </body>
 </html>
